Updated Classgraph: 3.1.10 -> 4.8.90
Don't ask me why I did that, but I did